cleanup of obsolete TComponent
Everything it does is now handled by the vanilla Component.

This adjustment now also makes the IDE's localisation checker work